--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $ git checkout gh-pages
       </section>
     </div>
     <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      <p>Powered by <a href="http://blaazetech.com">Blaaze Technologies</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
