--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Blaazetech.github.com by blaazetech</title>
+    <title>Innovations at Blaaze Technologies</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,11 +17,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Blaazetech.github.com</h1>
-        <p>My public face on github</p>
+        <h1>Innovations at Blaaze Technologies</h1>
+        <p>Our shout-out on github</p>
         <p class="view"><a href="https://github.com/blaazetech">View the Project on GitHub <small>blaazetech</small></a></p>
         <ul>
-          <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/blaazetech">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
